# mindsong-voice-foundry

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: start_server.sh
src/api/: server.py
src/api/routes/: bakeoff.py  health.py  master.py  presets.py  qc.py  synthesize.py
src/engine/: chatterbox_cli.py  chatterbox_engine.py  f5tts_engine.py  voxcpm2_engine.py
src/post/: mix_chain.py
src/presets/: preset_defaults.py
voices/mark/manifests/: VOICE_SOURCE_MANIFEST.md
