[project]
name = "mindsong-voice-foundry"
version = "0.1.0"
description = "Production voice engine for RockyAI Tutor, Skybeam, and agent-native content generation."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "f5-tts>=0.1.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "transformers>=4.38.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
